# clarity-benchmarking

./: .gitignore  Cargo.toml  README.md  chainstate.sqlite  cost_constants.csv  cost_estimator.ipynb  cost_estimator.py  functions.md
.cargo/: config
analysis/: analysis.Dockerfile  cost_estimator.py  draw_single_curve.py  measure_criterion_size.py  run_all_pr20.sh  run_pr20.sh
benches/: bench.rs
db-3/: index.sqlite  index.sqlite.blobs
db-3/clarity/: marf.sqlite  marf.sqlite.blobs
db-3/sortition/: marf.sqlite
db/epoch2/sortition/: marf.sqlite
db/epoch2/vm/clarity/: marf.sqlite
db/epoch3/sortition/: marf.sqlite
db/epoch3/vm/: index.sqlite  index.sqlite.blobs
db/epoch3/vm/clarity/: marf.sqlite  marf.sqlite.blobs
db/sortition/: marf.sqlite
db/vm/: index.sqlite  index.sqlite.blobs
db/vm/clarity/: marf.sqlite  marf.sqlite.blobs
http-profiling/: benchmark.js  package-lock.json  package.json
latest-data/criterion/cost_add/report/: index.html
latest-data/criterion/cost_analysis_bind_name/report/: index.html
latest-data/criterion/cost_analysis_check_let/report/: index.html
latest-data/criterion/cost_analysis_check_tuple_cons/report/: index.html
latest-data/criterion/cost_analysis_check_tuple_get/report/: index.html
latest-data/criterion/cost_analysis_check_tuple_merge/report/: index.html
latest-data/criterion/cost_analysis_get_function_entry/report/: index.html
latest-data/criterion/report/: index.html
marf-profiling/: speed_over_time.py
marf-profiling/mmap-experiments/: README.md  extract_data.py  make_data.sh  moving_average_over_time.py  speed_over_time.py  summarize_data.py
proposal/: cost_proposal.md  costs-3.clar  estimated_constants.csv  function_name_to_type.csv  make_cost_functions.py  new_costs.clar  updates_table.md
src/: clarity_wasm.rs  generators.rs  headers_db.rs  lib.rs
(+6838 files in other folders)
