[package]
name = "cost-bench"
version = "0.1.0"
authors = ["Reed Rosenbluth <331327+reedrosenbluth@users.noreply.github.com>"]
edition = "2018"

[dev-dependencies]
criterion = "0.3.4"

[dependencies]
blockstack-core = { git = "https://github.com/blockstack/stacks-blockchain", branch = "feat/eval-all-pub" }
rand = "0.8.3"

[dependencies.secp256k1]
version = "0.19.0"
features = ["serde", "recovery"]

[lib]
name = "benchmarking_lib"
path = "src/lib.rs"

[[bench]]
name = "bench"
harness = false
