[package]
name = "cost-bench"
version = "0.1.0"
authors = ["Reed Rosenbluth <331327+reedrosenbluth@users.noreply.github.com>"]
edition = "2018"

[dev-dependencies]
criterion = "0.3.4"

[dependencies]
#blockstack-core = { git = "https://github.com/blockstack/stacks-blockchain", branch = "dev/clarity-benchmarking" }
blockstack-core = { path = "../stacks-blockchain", features = ["testing"] }
rand = "0.8.3"
lazy_static = "1.4.0"
clarity = { path = "../stacks-blockchain/clarity", features = ["default", "testing"] }

[dependencies.secp256k1]
version = "0.19.0"
features = ["serde", "recovery"]

[dependencies.rusqlite]
version = "=0.24.2"
features = ["blob", "serde_json", "i128_blob", "bundled", "trace"]

[lib]
name = "benchmarking_lib"
path = "src/lib.rs"

[[bench]]
name = "bench"
harness = false

[profile.bench]
opt-level = 3
